# kotonoha

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml  test.yml
docs/: SPEC-mpris-lyrics.md  SPEC.md
docs/superpowers/plans/: 2026-07-10-external-lyrics-experience.md  2026-07-11-cider-playback-timing.md  2026-07-11-github-workflows.md  2026-07-11-release-package-ci-fixes.md  2026-07-13-cmake-wheel-integration.md
docs/superpowers/specs/: 2026-07-10-external-lyrics-experience-design.md  2026-07-11-cider-playback-timing-design.md  2026-07-11-github-workflows-design.md  2026-07-12-cmake-native-bridge-design.md
packaging/: dev.locez.kotonoha.metainfo.xml  kotonoha.1  kotonoha.desktop
packaging/debian/: changelog  control  install  rules
packaging/fedora/: kotonoha.spec
plugins/cider/lyrics/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
plugins/cider/lyrics/scripts/: receive.mjs
plugins/cider/lyrics/src/: main.ts  plugin.config.ts  vite-env.d.ts
plugins/cider/lyrics/src/__tests__/: appleMusicLyrics.test.ts  payload.test.ts  playback.test.ts  pluginConfig.test.ts  pluginState.test.ts  transport.test.ts  ttml.test.ts
plugins/cider/lyrics/src/probe/: appleMusicLyrics.ts  payload.ts  playback.ts  pluginState.ts  transport.ts  ttml.ts  types.ts
scripts/: assemble_release.py  patch_linux_wheel_metadata.py  release_version.py
src/kotonoha/: __init__.py  __main__.py  build_bridge.sh  clock.py  config.py  controller.py  i18n.py  icons.py  karaoke.py  karaoke_label.py  layer_shell_bridge.cpp  leaf_icon.py  lyrics_loader.py  main.py  model.py  native.py  overlay.py  receiver.py  settings_dialog.py  state.py  strings.py  tray.py
src/kotonoha/lyrics/: __init__.py  artifact.py  cache.py  hanzi_fold.py  kugou.py  lrc_parser.py  lrclib.py  match.py  netease.py  resolver.py  select.py  yrc_parser.py
src/kotonoha/providers/: __init__.py  gate.py  mpris.py  mpris_track.py
tests/: conftest.py  test_clock.py  test_config.py  test_controller.py  test_desktop_entry.py  test_gate.py  test_i18n.py  test_karaoke.py  test_leaf_icon.py  test_lyrics.py  test_lyrics_cache.py  test_lyrics_loader.py  test_lyrics_providers.py  test_lyrics_resolver.py  test_model.py  test_mpris.py  test_mpris_provider.py  test_native.py  test_native_packaging.py  test_overlay.py  test_receiver.py  test_release_scripts.py  test_scaffold.py  test_select.py  test_settings_dialog.py  test_state.py  test_strings.py  test_tray.py  test_wheel_metadata.py
