[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/kotonoha/libkoto-layer.so" = "kotonoha/libkoto-layer.so"

[tool.hatch.build.hooks.build-scripts]
[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
  "bash src/kotonoha/build_bridge.sh",
]
artifacts = ["src/kotonoha/libkoto-layer.so"]

[project]
name = "kotonoha"
version = "0.1.0"
description = "Linux desktop lyrics overlay bridge using PyQt6 and player-specific plugins."
readme = "README.md"
authors = [
  { name = "Locez", email = "locez@locez.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "PyQt6",
  "qasync",
  "aiohttp",
  "dbus-fast",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "ty",
]

[project.scripts]
kotonoha = "kotonoha.main:entry_point"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
