[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/kotonoha"]
cmake.build-type = "Release"
cmake.args = ["-DKOTONOHA_INSTALL_DIR=kotonoha"]

[project]
name = "kotonoha"
version = "0.1.0"
description = "Linux desktop lyrics overlay bridge using PyQt6 and player-specific plugins."
readme = "README.md"
authors = [
  { name = "Locez", email = "locez@locez.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "PyQt6",
  "qasync",
  "aiohttp",
  "dbus-fast",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "tomli>=2; python_version < '3.11'",
  "ty",
]

[project.scripts]
kotonoha = "kotonoha.main:entry_point"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
