[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/kotonoha"]
cmake.build-type = "Release"
# KOTONOHA_INSTALL_DIR override is load-bearing (scikit-build-core's cmake.args
# wins over the CMake default). The KOTONOHA_INSTALL_LICENSE CMake option exists
# for packagers but is intentionally NOT set OFF here: the deb/rpm specs still
# key their license declarations off the CMake-staged copy, so flipping it would
# break those builds. Left ON until those specs migrate to .dist-info/licenses/.
cmake.args = ["-DKOTONOHA_INSTALL_DIR=kotonoha"]
# Build-only sources have no business in the installed wheel (the compiled
# libkoto-layer.so is what ships).
wheel.exclude = ["**/*.cpp", "**/*.sh", "**/protocols/*.xml"]

[project]
name = "kotonoha"
version = "0.1.0"
description = "Linux desktop lyrics overlay bridge using PyQt6 and player-specific plugins."
readme = "README.md"
authors = [
  { name = "Locez", email = "locez@locez.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "PyQt6",
  "qasync",
  "aiohttp",
  "dbus-fast",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "tomli>=2; python_version < '3.11'",
  "ty",
]

[project.scripts]
kotonoha = "kotonoha.main:entry_point"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
